--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
         <h1>micro</h1>
-        <a href="rss.xml">subscribe</a>
+        <a href="rss.xml" style="text-align: center;">subscribe</a>
         <div class="thought">
             <p>the human condition is to recieve meaning from others, from society<br> <br>
                 the philosphical condition is to generalize from one's own experiences</p>
