fix subscribe button

--- a/index.html
+++ b/index.html
@@ -33,5 +33,10 @@
             <hr>
 
         </div>
+
+        <div class="thought">
+            <p>call me web development how i put my front end in her repository</p>
+            <hr>
+        </div>
   </body>
 </html>
