fix subscribe button

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
 
         <div class="thought">
-            <p>call me web development how i put my front end in her repository</p>
+            <p>call me web development how i put my front end in yo momma repository</p>
             <hr>
         </div>
   </body>
