funny rss button

--- a/index.html
+++ b/index.html
@@ -38,5 +38,6 @@
             <p>call me web development how i put my front end in yo momma repository</p>
             <hr>
         </div>
+        <a href="https://twitter.com/esyudkowsky/status/1282539111958507520" style="text-align: center; display: block; margin: 20px auto 0px;"><img src="https://validator.w3.org/feed/images/valid-rss-rogers.png"></a>
   </body>
 </html>
