nixon sleepy (mobile commit)

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         <h1>micro</h1>
         <a href="rss.xml" style="text-align: center; display: block; margin: auto;">subscribe</a>
         <div class="thought">
+            <p>watergate? more like water bed <br> <br> shh... nixon sleepy</p>
+            <hr>
+        </div>
+        <div class="thought">
             <p>the human condition is to recieve meaning from others, from society<br> <br>
                 the philosphical condition is to generalize from one's own experiences</p>
                 <hr> 
