--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
   <body>
         <h1>micro</h1>
         <a href="rss.xml" style="text-align: center; display: block; margin: auto;">subscribe</a>
-        
+        <div class="thought">
+            <p>when the nuclear family undergoes fission</p>
+            <hr>
+        </div>
+
+        <div class="thought">
+            <p>i grounded the plane because the cartesian demon told me to</p>
+            <hr>
+        </div>
+
         <div class="thought">
             <p>tiktok song is not an ontological quality. it is a label you expect me to imbue with meaning, as though it signifies some kind of lower culture.<br> <br>higher and lower art and culture are as mythical as yo momma's marital fidelity, which is to say that they are both feebly constructed and rationally indefensible.<br><br> to a Tok-less man, music is simply music. he is free.</p>
             <hr>
