add vienna circle bloast no rss tho (pushing to prod 🤩)

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
         <h1>micro</h1>
         <a href="rss.xml" style="text-align: center; display: block; margin: auto;">subscribe</a>
         <div class="thought">
+            <p>this could be us but you playin</p>
+            <img class="thought-embed" src="us.jpeg" alt="screenshot of the vienna circle wikipedia article">
+            <hr>
+        </div>
+        <div class="thought">
             <p>when the nuclear family undergoes fission</p>
             <hr>
         </div>
