haidbauer incident shitpost

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
   <body>
         <h1>micro</h1>
         <a href="rss.xml" style="text-align: center; display: block; margin: auto;">subscribe</a>
+
+        <div class="thought">
+            <p>this could be us but you're not austrian philosopher ludwig wittgenstein</p>
+            <img class="thought-embed" src="us2.jpeg" alt="screenshot of the wikipedia article on the haidbauer incident">
+            <hr>
+        </div>
+
         <div class="thought">
             <p>this could be us but you playin</p>
             <img class="thought-embed" src="us.jpeg" alt="screenshot of the vienna circle wikipedia article">
