ITS A JPEG NOT A PNG

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <div class="thought">
             <p>this could be us but you're not austrian philosopher ludwig wittgenstein</p>
-            <img class="thought-embed" src="us2.jpeg" alt="screenshot of the wikipedia article on the haidbauer incident">
+            <img class="thought-embed" src="us2.png" alt="screenshot of the wikipedia article on the haidbauer incident">
             <hr>
         </div>
 
