--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
   <body>
         <h1>micro</h1>
         <a href="rss.xml" style="text-align: center; display: block; margin: auto;">subscribe</a>
+         <div class="thought">
+            <p>there is no essential difference betwen aesthetics and morality, they are culturally-developed value systems and they work together to produce judgments. <br> <br>
 
+            disgust is an essential component of what we feel when we judge something to be evil. ugliness and evil are the same thing, we just act like they're different because it's convenient. <br> <br> 
+
+            ergo, yo momma is not only beautiful but also therefore ontologically good. i hope you have a pleasant evening. (i will make sure she does)</p>
+            <hr>
+        </div>
         <div class="thought">
             <p>this could be us but you're not austrian philosopher ludwig wittgenstein</p>
             <img class="thought-embed" src="us2.png" alt="screenshot of the wikipedia article on the haidbauer incident">
