--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
   <body>
         <h1>micro</h1>
         <a href="rss.xml" style="text-align: center; display: block; margin: auto;">subscribe</a>
-         <div class="thought">
+        <div class="thought">
+            <p>things I believe</p>
+            <ol>
+                <li> political parties *are* football teams. it is important that we treat them as such. i should see my representative in a helmet in all public appearances. </li>
+                <li> the cartesian demon is real and we smash </li>
+                <li> you can tune your cognition in any direction. (in any given moment i compute the gradient of the ground i'm standing on and tune in the direction of the resultant vector) </li>
+            </ol>
+            <p> these form the basis for my axiomatic moral system, in case you were wondering how i became who i am</p>
+        </div> 
+        <div class="thought">
             <p>there is no essential difference betwen aesthetics and morality, they are culturally-developed value systems and they work together to produce judgments. <br> <br>
 
             disgust is an essential component of what we feel when we judge something to be evil. ugliness and evil are the same thing, we just act like they're different because it's convenient. <br> <br> 
