add all worship is worship music

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
   <body>
         <h1>micro</h1>
         <a href="rss.xml" style="text-align: center; display: block; margin: auto;">subscribe</a>
+        
+        <div class="thought">
+            <img class="thought-embed" src="all-music.png" alt="photo of some sort of anatomical diagram of the head with the caption, 'all music is worship music / if you know how to listen'">
+            <p><i>(i do not own the rights to this image)</i></p>
+            <hr>
+        </div>
+        
         <div class="thought">
             <p>things I believe</p>
             <ol>
