--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
         <a href="rss.xml" style="text-align: center; display: block; margin: auto;">subscribe</a>
         
         <div class="thought">
+            <img class="thought-embed" src="recursive-centaur.png" alt="a recursive centaur, part centaur, part recursive centaur'">
+            <p>Me and who in an infinite recursion of Hegelian dialectical synthesis?</p>
+            <p><i><a href="https://twitter.com/jplur_/status/1039592541656633344/photo/1">source?</a></i></p>
+            <hr>
+        </div>
+
+        <div class="thought">
             <img class="thought-embed" src="all-music.jpeg" alt="photo of some sort of anatomical diagram of the head with the caption, 'all music is worship music / if you know how to listen'">
             <p><i>(i do not own the rights to this image)</i></p>
             <hr>
