--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         
         <div class="thought">
             <img class="thought-embed" src="recursive-centaur.png" alt="a recursive centaur, part centaur, part recursive centaur'">
-            <p>Me and who in an infinite recursion of Hegelian dialectical synthesis?</p>
+            <p>me and who in an infinite recursion of Hegelian dialectical synthesis?</p>
             <p><i><a href="https://twitter.com/jplur_/status/1039592541656633344/photo/1">source?</a></i></p>
             <hr>
         </div>
